--- a/src/main/resources/properties/error.properties
+++ b/src/main/resources/properties/error.properties
@@ -8,3 +8,4 @@
 app.accessDenied=Access Denied
 #app.invalidateCreditial=Could not validate the credentials
 app.invalidateCreditial=The entered user id and password do not match authorized credentials.
+app.already.exist=Given Email Id {0} is already register .Please provide new email id for registration.
