--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,23 @@
     <artifactId>commons-lang3</artifactId>
     <version>3.0</version>
 </dependency>
+<!-- All Mail related stuff + Much more-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${springframework.version}</version>
+        </dependency>
+<!-- JavaMail -->
+<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>javax.mail-api</artifactId>
+			<version>1.5.5</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
 	</dependencies>
 
 
