--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,11 @@
     <artifactId>javax.inject</artifactId>
     <version>1</version>
 </dependency>
-        
+ <dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20160810</version>
+</dependency>
   <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
